update to revision 24885