@@ -58,6 +58,7 @@ public class BufferOptionPane extends AbstractOptionPane
 	private Buffer buffer;
 	private JCheckBox elasticTabstops;
 	private JComboBox<String> autoIndent;
+	private JCheckBox locked;
 
 	public BufferOptionPane()
 	{
@@ -223,6 +224,12 @@ public class BufferOptionPane extends AbstractOptionPane
 		elasticTabstops.setSelected(buffer.getBooleanProperty("elasticTabstops"));
 		addComponent(elasticTabstops);
 		//}}}
+
+		//{{{ Locked setting
+		locked = new JCheckBox(jEdit.getProperty("buffer-options.locked"));
+		locked.setSelected(buffer.getBooleanProperty("locked"));
+		addComponent(locked);
+		//}}}
 	} //}}}
 
 	//{{{ _save() method
@@ -275,7 +282,7 @@ public class BufferOptionPane extends AbstractOptionPane
 
 		try
 		{
-			buffer.setProperty("maxLineLen",new Integer(
+			buffer.setProperty("maxLineLen",Integer.valueOf(
 				maxLineLen.getSelectedItem().toString()));
 		}
 		catch(NumberFormatException nf)
@@ -284,7 +291,7 @@ public class BufferOptionPane extends AbstractOptionPane
 
 		try
 		{
-			buffer.setProperty("tabSize",new Integer(
+			buffer.setProperty("tabSize",Integer.valueOf(
 				tabSize.getSelectedItem().toString()));
 		}
 		catch(NumberFormatException nf)
@@ -293,7 +300,7 @@ public class BufferOptionPane extends AbstractOptionPane
 
 		try
 		{
-			buffer.setProperty("indentSize",new Integer(
+			buffer.setProperty("indentSize",Integer.valueOf(
 				indentSize.getSelectedItem().toString()));
 		}
 		catch(NumberFormatException nf)
@@ -304,8 +311,10 @@ public class BufferOptionPane extends AbstractOptionPane
 		buffer.setBooleanProperty("elasticTabstops",elasticTabstops.isSelected());
 		buffer.setStringProperty("autoIndent", (String)autoIndent.getSelectedItem());
 
+		buffer.setBooleanProperty("locked", locked.isSelected()); // requires propertiesChanged() call afterwards
+
 		index = mode.getSelectedIndex();
-		buffer.setMode(modes[index]);
+		buffer.setMode(modes[index]); // NOTE: setMode() makes implicit call of propertiesChanged()
 		switch(checkModStatus.getSelectedIndex())
 		{
 		case 0:
